# scango_library

./: CMakeLists.txt  README.md  bs_def.h  bs_i_rpc.h  bsc_rpc.cpp  bsc_rpc.h  bsc_rpc_init.cpp  dcf_qrcode.cpp  dcf_qrcode.h  dcframe_proc.cpp  dcframe_proc.h  looper.cpp  looper.h  scango_dll.cpp  scango_dll.h  zhw_bs_main.cpp  zhw_pdalib.h  zhw_tools.cpp  zhw_tools.h
.github/workflows/: cmake-single-platform-sim64.yml  cmake-single-platform.yml
dcframe/kernel/comm/: dcf.h  dcf_comm_api.cpp
dcframe/kernel/vfs/: dcf_vfs.cpp
dcframe/public/: config.h  dcf_cmdid.h  dcf_def.h  dcf_err.h  dcf_i_mailbox.h  dcf_i_rcc_dth.h  dcf_modid.h  dcf_msg0.h  dcf_self_api.h  dcf_time.h  dcf_vfs.h  extern_api.h  extern_hook_api.h  win_to_linux_type.h
dcframe/tools/array/: dcf_numsfixarray.cpp  dcf_numsfixarray.h  dcf_strfixarray.cpp  dcf_strfixarray.h
dcframe/tools/cjson/: cJSON.c  cJSON.h
dcframe/tools/comm/: dcf_bits.cpp  dcf_bits.h  dcf_ext_api.cpp  dcf_string.cpp  dcf_string.h  dcf_time.cpp  debuger.cpp
dcframe/tools/dtframe/: dcf_dtframe.cpp  dcf_dtframe.h
dcframe/tools/encrypt/: dcf_aes128.cpp  dcf_aes128.h  dcf_base64.cpp  dcf_base64.h  dcf_des64.cpp  dcf_md5.cpp
dcframe/tools/list/: dcf_fixarraylist.cpp  dcf_fixarraylist.h  dcf_slist.cpp  dcf_slist.h
dcframe/tools/lock/: dcf_lock.cpp  dcf_lock.h
dcframe/tools/pkghelper/: dcf_pkghelper.cpp  dcf_pkghelper.h
dcframe/tools/socket/: dcf_rcc_dthelper.cpp  dcf_rcc_dthelper.h  dcf_udp.cpp  dcf_udp.h
dcframe/tools/sort/: dcf_sort.cpp  dcf_sort.h
dcframe/tools/vector/: dcf_vector.cpp  dcf_vector.h
dcframe/tools/zlib/: dcf_zlib.cpp  dcf_zlib.h
include/: pthread.h
lib/: zlib.lib
